added capability to read from properties file

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,3 +1,6 @@
 browser = firefox
-proxy.enabled = true
+proxy.enabled = false
 proxy.path = localhost:11111
+
+## http://demoqa.com/
+home.page = http://demoqa.com/
