--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -4,3 +4,16 @@ proxy.path = localhost:11111
 
 ## http://demoqa.com/
 home.page = http://demoqa.com/
+#first key would be used to identify the type of locator
+#for eg:- _id --> By.id();
+first.name = firstname_id
+firstname_id = name_3_firstname
+last.name = lastname_id
+lastname_id = name_3_lastname
+marital.status = marital_status_name
+marital_status_name = radio_4[]
+hobby = hobby_name
+hobby_name = checkbox_5[]
+
+about.yourself = about_yourself_id
+about_yourself_id = description
