added select;added form submit button

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -5,15 +5,28 @@ proxy.path = localhost:11111
 ## http://demoqa.com/
 home.page = http://demoqa.com/
 #first key would be used to identify the type of locator
-#for eg:- _id --> By.id();
+#for eg:- _id --> By.id(); _name --> By.name(); etc
 first.name = firstname_id
 firstname_id = name_3_firstname
 last.name = lastname_id
 lastname_id = name_3_lastname
+# using name as radio always comes in a group
 marital.status = marital_status_name
 marital_status_name = radio_4[]
+# checkbox also comes in group
 hobby = hobby_name
 hobby_name = checkbox_5[]
-
+country = country_id
+country_id = dropdown_7
+phone.number = phone_number_id
+phone_number_id = phone_9
+username = username_id
+username_id = username
+email = email_id
+email_id = email_1
 about.yourself = about_yourself_id
 about_yourself_id = description
+password = password_id
+password_id = password_2
+confirm.password = confirm_password_id
+confirm_password_id = confirm_password_password_2
